error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/src/bug.py", line 20
    else:
         ^
IndentationError: unindent does not match any outer indentation level
